--- a/src/static/popup.html
+++ b/src/static/popup.html
@@ -5,7 +5,6 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
   <link rel="stylesheet" href="index.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +13,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="../pages/Popup/index.jsx"></script>
+  <script src="../pages/Popup/index.js"></script>
 </body>
 
 </html>
